# graphic_api

./: .gitignore  README.md
OpenGL_helper/: .clang-format  CMakeLists.txt  README.md  cmakeBuild_and_Run.sh  imgui.ini
OpenGL_helper/res/shaders/: Basic.shader  BasicTexture.shader  TextureIndexFrag.shader  TextureIndexVert.shader  UniformBlink.shader  frag.glsl.shader  test.frag.glsl  test.vert.glsl  vert.glsl.shader
OpenGL_helper/src/: Application.cpp  IndexBuffer .cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  _Logger.h  _Logger_Core.h  _Logger_encrypt_api.h
OpenGL_helper/src/tests/: Test.cpp  Test.h  TestBigIndices.cpp  TestBigIndices.h  TestClearColor.cpp  TestClearColor.h  TestDynamicGeometry.cpp  TestDynamicGeometry.h  TestMultipleObjects.cpp  TestMultipleObjects.h  TestSandbox.cpp  TestSandbox.h  TestTexture2D.cpp  TestTexture2D.h  TestTextureIndex.cpp  TestTextureIndex.h  TestTextureRainbow.cpp  TestTextureRainbow.h  TestTriangle.cpp  TestTriangle.h  TestUniform.cpp  TestUniform.h  _Vert_Structure.h
OpenGL_helper/tools/: command_ffmpeg_helpful.md
graphic_API_irrelevant/: checker.c  plasma.cpp
hw_addr_api/: glad.c  glad.h
learnOpenGL_s1/: .clang-format  cmakeBuild_and_Run.sh
learnOpenGL_s1/001Triangle/: 001_super_basic.cpp  002_two_triangle_split.cpp  003_two_triangle_composer.cpp  004_two_triangle_EBO.cpp  005_multi_attribute.cpp  helper_common.h
learnOpenGL_s1/001Triangle/craft1_HelloTriangle/: 001_blueWindow.cpp  002_redTriangle.cpp  CMakeLists.txt  README.md
learnOpenGL_s1/001Triangle/craft2_Triangle_glew/: 001_blueWindow.cpp  001_redTriangle.cpp  002_redTriangle.cpp  CMakeLists.txt  README.md
packages_add_on/: apt_install.md
